move pracitcum 01 and 02 to directory `jobsheet-02`

--- a/notebooks/jobsheet-02/practicum-02.ipynb
+++ b/notebooks/jobsheet-02/practicum-02.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "41711caa",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
     }
    ],
    "source": [
-    "df_titanic = pd.read_csv('../datasets/titanic-dataset.csv')\n",
+    "df_titanic = pd.read_csv('../../datasets/titanic-dataset.csv')\n",
     "df_titanic"
    ]
   },
@@ -808,7 +808,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "GIDEON",
+   "display_name": "gideon",
    "language": "python",
    "name": "python3"
   },
