add button `Open in Colab` in jupyter notebook

--- a/notebooks/jobsheet-02/practicum-01.ipynb
+++ b/notebooks/jobsheet-02/practicum-01.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f600e1bd",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/FarrelAD/Sinau-Mesin/blob/main/notebooks/jobsheet-02/practicum-01.ipynb\" target=\"_blank\">\n",
+    "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b10e245b",
    "metadata": {},
    "source": [
@@ -737,7 +747,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "GIDEON",
+   "display_name": "gideon",
    "language": "python",
    "name": "python3"
   },
