--- a/notebooks/jobsheet-02/practicum-02.ipynb
+++ b/notebooks/jobsheet-02/practicum-02.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "fb79a57b",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/FarrelAD/Sinau-Mesin/blob/main/notebooks/jobsheet-02/practicum-02.ipynb\" target=\"_blank\">\n",
+    "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dc10ef6e",
    "metadata": {},
    "source": [
