quiz-1: add notebook identity

--- a/notebooks/03-kuis-01/quiz-01.ipynb
+++ b/notebooks/03-kuis-01/quiz-01.ipynb
@@ -2,6 +2,21 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Identitas\n",
+        "\n",
+        "**Nama:** Farrel Augusta Dinata\n",
+        "\n",
+        "**Kelas:** TI 3H\n",
+        "\n",
+        "**NIM:** 2341720081\n",
+        "\n",
+        "**No. Absen:** 12"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "Q4BsBXFH9vHP"
       },
