quiz-1: add `Open in Colab` button

--- a/notebooks/03-kuis-01/quiz-01.ipynb
+++ b/notebooks/03-kuis-01/quiz-01.ipynb
@@ -4,6 +4,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "<a href=\"https://colab.research.google.com/github/FarrelAD/Sinau-Mesin/blob/main/notebooks/03-quiz-01/quiz-01.ipynb\" target=\"_blank\">\n",
+        "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Identitas\n",
         "\n",
         "**Nama:** Farrel Augusta Dinata\n",
