week-4(chore): improve code formatting and readability `practicum-01`

--- a/notebooks/05-jobsheet-05/practicum-01.ipynb
+++ b/notebooks/05-jobsheet-05/practicum-01.ipynb
@@ -10,16 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "10947acf",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "from matplotlib.axes import Axes\n",
     "import numpy as np\n",
-    "\n",
     "from sklearn.cluster import DBSCAN\n",
     "from sklearn.datasets import make_blobs\n",
+    "from typing import Union, Optional, Dict, Any\n",
     "import hdbscan"
    ]
   },
@@ -33,12 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "cb5f818f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot(X, labels, probabilities=None, parameters=None, ground_truth=False, ax=None):\n",
+    "def plot(\n",
+    "    X: np.ndarray,\n",
+    "    labels: Union[np.ndarray, list[int]],\n",
+    "    probabilities: Optional[Union[np.ndarray, list[float]]] = None,\n",
+    "    parameters: Optional[Dict[str, Any]] = None,\n",
+    "    ground_truth: bool = False,\n",
+    "    ax: Optional[Axes] = None\n",
+    "):\n",
     "    if ax is None:\n",
     "        _, ax = plt.subplots(figsize=(10, 4))\n",
     "    labels = labels if labels is not None else np.ones(X.shape[0])\n",
@@ -49,7 +57,7 @@
     "    \n",
     "    for k, col in zip(unique_labels, colors):\n",
     "        if k == -1:\n",
-    "            col = [0, 0, 0, 1]  # warna hitam untuk noise\n",
+    "            col = [0, 0, 0, 1]\n",
     "        class_index = (labels == k).nonzero()[0]\n",
     "        for ci in class_index:\n",
     "            ax.plot(\n",
@@ -80,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2716c3e0",
    "metadata": {},
    "outputs": [
@@ -96,9 +104,11 @@
     }
    ],
    "source": [
-    "centers = [[1, 1], [-1, -1], [1.5, -1.5]]\n",
     "X, labels_true = make_blobs(\n",
-    "    n_samples=750, centers=centers, cluster_std=[0.4, 0.1, 0.75], random_state=0\n",
+    "    n_samples=750, \n",
+    "    centers=[[1, 1], [-1, -1], [1.5, -1.5]],  # type: ignore\n",
+    "    cluster_std=[0.4, 0.1, 0.75], \n",
+    "    random_state=0\n",
     ")\n",
     "\n",
     "plot(X, labels=labels_true, ground_truth=True)"
@@ -114,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "4cde4016",
    "metadata": {},
    "outputs": [
@@ -139,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "62df64d1",
    "metadata": {},
    "outputs": [
@@ -170,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e77fc53e",
    "metadata": {},
    "outputs": [
@@ -221,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "58a84d34",
    "metadata": {},
    "outputs": [
@@ -237,16 +247,18 @@
     }
    ],
    "source": [
-    "centers = [[-0.85, -0.85], [-0.85, 0.85], [3, 3], [3, -3]]\n",
     "X, labels_true = make_blobs(\n",
-    "    n_samples=750, centers=centers, cluster_std=[0.2, 0.35, 1.35, 1.35], random_state=0\n",
+    "    n_samples=750, \n",
+    "    centers= [[-0.85, -0.85], [-0.85, 0.85], [3, 3], [3, -3]],  # type: ignore\n",
+    "    cluster_std=[0.2, 0.35, 1.35, 1.35], \n",
+    "    random_state=0\n",
     ")\n",
     "plot(X, labels=labels_true, ground_truth=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "3a9c2bcd",
    "metadata": {},
    "outputs": [
@@ -274,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "d1f5fdb9",
    "metadata": {},
    "outputs": [
