--- a/notebooks/05-jobsheet-05/practicum-02.ipynb
+++ b/notebooks/05-jobsheet-05/practicum-02.ipynb
@@ -9,27 +9,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "7878a3f4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "from matplotlib.axes import Axes\n",
     "import numpy as np\n",
     "from sklearn.cluster import DBSCAN\n",
     "from sklearn.datasets import make_blobs\n",
     "from sklearn.metrics import silhouette_score, davies_bouldin_score\n",
+    "from typing import Union, Optional, Dict, Any\n",
     "import hdbscan"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2b80e7b0",
+   "metadata": {},
+   "source": [
+    "# Visualization Helper Function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "2bf4f43a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot(X, labels, probabilities=None, parameters=None, ground_truth=False, ax=None):\n",
+    "def plot(\n",
+    "    X: np.ndarray,\n",
+    "    labels: Union[np.ndarray, list[int]],\n",
+    "    probabilities: Optional[Union[np.ndarray, list[float]]] = None,\n",
+    "    parameters: Optional[Dict[str, Any]] = None,\n",
+    "    ground_truth: bool = False,\n",
+    "    ax: Optional[Axes] = None\n",
+    "):\n",
     "    if ax is None:\n",
     "        _, ax = plt.subplots(figsize=(10, 4))\n",
     "    labels = labels if labels is not None else np.ones(X.shape[0])\n",
@@ -40,7 +57,7 @@
     "    \n",
     "    for k, col in zip(unique_labels, colors):\n",
     "        if k == -1:\n",
-    "            col = [0, 0, 0, 1]  # warna hitam untuk noise\n",
+    "            col = [0, 0, 0, 1]\n",
     "        class_index = (labels == k).nonzero()[0]\n",
     "        for ci in class_index:\n",
     "            ax.plot(\n",
@@ -63,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "4a336ddf",
    "metadata": {},
    "outputs": [
@@ -79,9 +96,11 @@
     }
    ],
    "source": [
-    "centers = [[1, 1], [-1, -1], [1.5, -1.5]]\n",
     "X, labels_true = make_blobs(\n",
-    "    n_samples=750, centers=centers, cluster_std=[0.4, 0.1, 0.75], random_state=0\n",
+    "    n_samples=750, \n",
+    "    centers=[[1, 1], [-1, -1], [1.5, -1.5]],  # type: ignore\n",
+    "    cluster_std=[0.4, 0.1, 0.75], \n",
+    "    random_state=0\n",
     ")\n",
     "\n",
     "plot(X, labels=labels_true, ground_truth=True)"
@@ -89,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "32239d3f",
    "metadata": {},
    "outputs": [
@@ -123,16 +142,16 @@
     }
    ],
    "source": [
-    "PARAM = ({\"min_cluster_size\": 5}, {\"min_cluster_size\": 3}, {\"min_cluster_size\": 25})\n",
+    "params = ({\"min_cluster_size\": 5}, {\"min_cluster_size\": 3}, {\"min_cluster_size\": 25})\n",
     "fig, axes = plt.subplots(3, 1, figsize=(10, 12))\n",
-    "for i, param in enumerate(PARAM):\n",
+    "for i, param in enumerate(params):\n",
     "    hdb = hdbscan.HDBSCAN(**param).fit(X)\n",
     "    plot(X, hdb.labels_, hdb.probabilities_, param, ax=axes[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "cb4b3659",
    "metadata": {},
    "outputs": [
@@ -166,20 +185,20 @@
     }
    ],
    "source": [
-    "PARAM = (\n",
+    "params = (\n",
     "    {\"min_cluster_size\": 20, \"min_samples\": 5},\n",
     "    {\"min_cluster_size\": 20, \"min_samples\": 3},\n",
     "    {\"min_cluster_size\": 20, \"min_samples\": 25},\n",
     ")\n",
     "fig, axes = plt.subplots(3, 1, figsize=(10, 12))\n",
-    "for i, param in enumerate(PARAM):\n",
+    "for i, param in enumerate(params):\n",
     "    hdb = hdbscan.HDBSCAN(**param).fit(X)\n",
     "    plot(X, hdb.labels_, hdb.probabilities_, param, ax=axes[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "79c0b9cb",
    "metadata": {},
    "outputs": [
@@ -205,21 +224,21 @@
     }
    ],
    "source": [
-    "PARAM = (\n",
+    "params = (\n",
     "    {\"cut_distance\": 0.1},\n",
     "    {\"cut_distance\": 0.5},\n",
     "    {\"cut_distance\": 1.0},\n",
     ")\n",
     "hdb = hdbscan.HDBSCAN().fit(X)\n",
-    "fig, axes = plt.subplots(len(PARAM), 1, figsize=(10, 12))\n",
-    "for i, param in enumerate(PARAM):\n",
+    "fig, axes = plt.subplots(len(params), 1, figsize=(10, 12))\n",
+    "for i, param in enumerate(params):\n",
     "    labels = hdb.dbscan_clustering(**param)\n",
     "    plot(X, labels, hdb.probabilities_, param, ax=axes[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "03c3bcb7",
    "metadata": {},
    "outputs": [
@@ -238,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "578aa9e2",
    "metadata": {},
    "outputs": [
@@ -257,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "c0071ead",
    "metadata": {},
    "outputs": [
