--- a/notebooks/05-jobsheet-05/practicum-99.ipynb
+++ b/notebooks/05-jobsheet-05/practicum-99.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3ca1a8e0",
    "metadata": {},
    "outputs": [],
@@ -19,12 +19,13 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.datasets import load_iris, load_digits\n",
+    "from sklearn.datasets import load_iris\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.manifold import TSNE\n",
     "from sklearn import metrics\n",
     "from sklearn.metrics import confusion_matrix\n",
+    "from typing import Union, List\n",
     "import hdbscan\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "26cc99c7",
    "metadata": {},
    "outputs": [
@@ -55,7 +56,35 @@
       "Shape: (150, 4)\n",
       "Features: ['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)', 'petal width (cm)']\n",
       "Target classes: ['setosa' 'versicolor' 'virginica']\n",
-      "Class distribution: [50 50 50]\n",
+      "Class distribution: [50 50 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the Iris dataset\n",
+    "iris = load_iris()\n",
+    "X_iris = iris.data\n",
+    "y_iris = iris.target\n",
+    "feature_names = iris.feature_names\n",
+    "target_names = iris.target_names\n",
+    "\n",
+    "print(\"Dataset: Iris\")\n",
+    "print(f\"Shape: {X_iris.shape}\")\n",
+    "print(f\"Features: {feature_names}\")\n",
+    "print(f\"Target classes: {target_names}\")\n",
+    "print(f\"Class distribution: {np.bincount(y_iris)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e60a4f8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "Dataset overview:\n",
       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
@@ -96,19 +125,6 @@
     }
    ],
    "source": [
-    "# Load the Iris dataset\n",
-    "iris = load_iris()\n",
-    "X_iris = iris.data\n",
-    "y_iris = iris.target\n",
-    "feature_names = iris.feature_names\n",
-    "target_names = iris.target_names\n",
-    "\n",
-    "print(\"Dataset: Iris\")\n",
-    "print(f\"Shape: {X_iris.shape}\")\n",
-    "print(f\"Features: {feature_names}\")\n",
-    "print(f\"Target classes: {target_names}\")\n",
-    "print(f\"Class distribution: {np.bincount(y_iris)}\")\n",
-    "\n",
     "# Create DataFrame for easier handling\n",
     "df_iris = pd.DataFrame(X_iris, columns=feature_names)\n",
     "df_iris['true_label'] = y_iris\n",
@@ -130,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "61524828",
    "metadata": {},
    "outputs": [
@@ -170,21 +186,39 @@
     "fig, axes = plt.subplots(1, 3, figsize=(18, 5))\n",
     "\n",
     "# Original features (first two)\n",
-    "scatter1 = axes[0].scatter(X_iris[:, 0], X_iris[:, 1], c=y_iris, cmap='viridis', alpha=0.7)\n",
+    "scatter1 = axes[0].scatter(\n",
+    "    X_iris[:, 0], \n",
+    "    X_iris[:, 1], \n",
+    "    c=y_iris, \n",
+    "    cmap='viridis', \n",
+    "    alpha=0.7\n",
+    ")\n",
     "axes[0].set_xlabel(feature_names[0])\n",
     "axes[0].set_ylabel(feature_names[1])\n",
     "axes[0].set_title('Original Data (First 2 Features)')\n",
     "axes[0].legend(*scatter1.legend_elements(), title=\"Classes\")\n",
     "\n",
     "# PCA\n",
-    "scatter2 = axes[1].scatter(X_pca[:, 0], X_pca[:, 1], c=y_iris, cmap='viridis', alpha=0.7)\n",
+    "scatter2 = axes[1].scatter(\n",
+    "    X_pca[:, 0], \n",
+    "    X_pca[:, 1], \n",
+    "    c=y_iris, \n",
+    "    cmap='viridis', \n",
+    "    alpha=0.7\n",
+    ")\n",
     "axes[1].set_xlabel(f'PC1 ({pca.explained_variance_ratio_[0]:.2%} variance)')\n",
     "axes[1].set_ylabel(f'PC2 ({pca.explained_variance_ratio_[1]:.2%} variance)')\n",
     "axes[1].set_title('PCA Visualization')\n",
     "axes[1].legend(*scatter2.legend_elements(), title=\"Classes\")\n",
     "\n",
     "# t-SNE\n",
-    "scatter3 = axes[2].scatter(X_tsne[:, 0], X_tsne[:, 1], c=y_iris, cmap='viridis', alpha=0.7)\n",
+    "scatter3 = axes[2].scatter(\n",
+    "    X_tsne[:, 0], \n",
+    "    X_tsne[:, 1], \n",
+    "    c=y_iris, \n",
+    "    cmap='viridis', \n",
+    "    alpha=0.7\n",
+    ")\n",
     "axes[2].set_xlabel('t-SNE 1')\n",
     "axes[2].set_ylabel('t-SNE 2')\n",
     "axes[2].set_title('t-SNE Visualization')\n",
@@ -207,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "6e6aaf9b",
    "metadata": {},
    "outputs": [
@@ -266,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "753802de",
    "metadata": {},
    "outputs": [
@@ -286,7 +320,10 @@
     }
    ],
    "source": [
-    "def evaluate_clustering(y_true, y_pred):\n",
+    "def evaluate_clustering(\n",
+    "    y_true: Union[np.ndarray, list[int]],\n",
+    "    y_pred: Union[np.ndarray, list[int]]\n",
+    ") -> None:\n",
     "    # Remove noise points for some metrics\n",
     "    mask = y_pred != -1\n",
     "    if mask.sum() == 0:\n",
@@ -322,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "398b6c49",
    "metadata": {},
    "outputs": [
@@ -382,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "5365a51d",
    "metadata": {},
    "outputs": [
@@ -427,9 +464,14 @@
     "    cm = confusion_matrix(y_true_no_noise, y_pred_no_noise)\n",
     "    \n",
     "    plt.figure(figsize=(8, 6))\n",
-    "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues',\n",
-    "                xticklabels=[f'Cluster {i}' for i in sorted(set(y_pred_no_noise))],\n",
-    "                yticklabels=target_names)\n",
+    "    sns.heatmap(\n",
+    "        cm, \n",
+    "        annot=True, \n",
+    "        fmt='d', \n",
+    "        cmap='Blues',\n",
+    "        xticklabels=[f'Cluster {i}' for i in sorted(set(y_pred_no_noise))],\n",
+    "        yticklabels=target_names\n",
+    "    )\n",
     "    plt.title('Confusion Matrix: True Labels vs HDBSCAN Clusters')\n",
     "    plt.xlabel('HDBSCAN Clusters')\n",
     "    plt.ylabel('True Labels')\n",
@@ -446,8 +488,12 @@
     "\n",
     "print(\"\\nDetailed Analysis:\")\n",
     "print(\"True Label vs HDBSCAN Cluster Cross-tabulation:\")\n",
-    "cross_tab = pd.crosstab(df_analysis['True_Class'], df_analysis['HDBSCAN_Cluster'], \n",
-    "                       margins=True, margins_name='Total')\n",
+    "cross_tab = pd.crosstab(\n",
+    "    df_analysis['True_Class'], \n",
+    "    df_analysis['HDBSCAN_Cluster'], \n",
+    "    margins=True, \n",
+    "    margins_name='Total'\n",
+    ")\n",
     "print(cross_tab)\n",
     "\n",
     "# Noise analysis by true class\n",
@@ -469,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "20162768",
    "metadata": {},
    "outputs": [
@@ -509,7 +555,12 @@
     }
    ],
    "source": [
-    "def experiment_hdbscan_parameters(X, y_true, min_cluster_sizes, min_samples_list):\n",
+    "def experiment_hdbscan_parameters(\n",
+    "    X: np.ndarray, \n",
+    "    y_true: np.ndarray, \n",
+    "    min_cluster_sizes: List[int], \n",
+    "    min_samples_list: List[int]\n",
+    ") -> pd.DataFrame:\n",
     "    results = []\n",
     "    \n",
     "    print(\"HDBSCAN Parameter Experiments:\")\n",
@@ -517,8 +568,10 @@
     "    \n",
     "    for min_cluster_size in min_cluster_sizes:\n",
     "        for min_samples in min_samples_list:\n",
-    "            clusterer = hdbscan.HDBSCAN(min_cluster_size=min_cluster_size, \n",
-    "                                       min_samples=min_samples)\n",
+    "            clusterer = hdbscan.HDBSCAN(\n",
+    "                min_cluster_size=min_cluster_size, \n",
+    "                min_samples=min_samples\n",
+    "            )\n",
     "            labels = clusterer.fit_predict(X)\n",
     "            \n",
     "            n_clusters = len(set(labels)) - (1 if -1 in labels else 0)\n",
@@ -561,33 +614,73 @@
     "    \n",
     "    return pd.DataFrame(results)\n",
     "\n",
-    "# Run parameter experiments\n",
-    "min_cluster_sizes = [3, 5, 7, 10]\n",
-    "min_samples_list = [1, 3, 5, 7]\n",
-    "\n",
-    "results_df = experiment_hdbscan_parameters(X_iris_scaled, y_iris, min_cluster_sizes, min_samples_list)\n",
+    "results_df = experiment_hdbscan_parameters(\n",
+    "    X_iris_scaled, y_iris, \n",
+    "    min_cluster_sizes=[3, 5, 7, 10],\n",
+    "    min_samples_list=[1, 3, 5, 7]\n",
+    ")\n",
     "\n",
     "# Visualize results\n",
     "fig, axes = plt.subplots(2, 2, figsize=(15, 10))\n",
     "\n",
     "# Number of clusters\n",
-    "pivot_clusters = results_df.pivot(index='min_samples', columns='min_cluster_size', values='n_clusters')\n",
-    "sns.heatmap(pivot_clusters, annot=True, fmt='d', cmap='viridis', ax=axes[0,0])\n",
+    "pivot_clusters = results_df.pivot(\n",
+    "    index='min_samples', \n",
+    "    columns='min_cluster_size', \n",
+    "    values='n_clusters'\n",
+    ")\n",
+    "sns.heatmap(\n",
+    "    pivot_clusters, \n",
+    "    annot=True, \n",
+    "    fmt='d', \n",
+    "    cmap='viridis', \n",
+    "    ax=axes[0,0]\n",
+    ")\n",
     "axes[0,0].set_title('Number of Clusters')\n",
     "\n",
     "# Noise percentage\n",
-    "pivot_noise = results_df.pivot(index='min_samples', columns='min_cluster_size', values='noise_pct')\n",
-    "sns.heatmap(pivot_noise, annot=True, fmt='.1f', cmap='Reds', ax=axes[0,1])\n",
+    "pivot_noise = results_df.pivot(\n",
+    "    index='min_samples', \n",
+    "    columns='min_cluster_size', \n",
+    "    values='noise_pct'\n",
+    ")\n",
+    "sns.heatmap(\n",
+    "    pivot_noise, \n",
+    "    annot=True, \n",
+    "    fmt='.1f', \n",
+    "    cmap='Reds', \n",
+    "    ax=axes[0,1]\n",
+    ")\n",
     "axes[0,1].set_title('Noise Percentage (%)')\n",
     "\n",
     "# ARI\n",
-    "pivot_ari = results_df.pivot(index='min_samples', columns='min_cluster_size', values='ari')\n",
-    "sns.heatmap(pivot_ari, annot=True, fmt='.3f', cmap='Blues', ax=axes[1,0])\n",
+    "pivot_ari = results_df.pivot(\n",
+    "    index='min_samples', \n",
+    "    columns='min_cluster_size', \n",
+    "    values='ari'\n",
+    ")\n",
+    "sns.heatmap(\n",
+    "    pivot_ari, \n",
+    "    annot=True, \n",
+    "    fmt='.3f', \n",
+    "    cmap='Blues', \n",
+    "    ax=axes[1,0]\n",
+    ")\n",
     "axes[1,0].set_title('Adjusted Rand Index')\n",
     "\n",
     "# V-measure\n",
-    "pivot_vmeasure = results_df.pivot(index='min_samples', columns='min_cluster_size', values='v_measure')\n",
-    "sns.heatmap(pivot_vmeasure, annot=True, fmt='.3f', cmap='Greens', ax=axes[1,1])\n",
+    "pivot_vmeasure = results_df.pivot(\n",
+    "    index='min_samples', \n",
+    "    columns='min_cluster_size', \n",
+    "    values='v_measure'\n",
+    ")\n",
+    "sns.heatmap(\n",
+    "    pivot_vmeasure, \n",
+    "    annot=True, \n",
+    "    fmt='.3f', \n",
+    "    cmap='Greens', \n",
+    "    ax=axes[1,1]\n",
+    ")\n",
     "axes[1,1].set_title('V-measure Score')\n",
     "\n",
     "plt.tight_layout()\n",
@@ -604,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "1d1f5519",
    "metadata": {},
    "outputs": [
@@ -675,8 +768,10 @@
     "    print(\"⚠ HDBSCAN found more clusters than expected (over-clustering)\")\n",
     "\n",
     "# Analyze ARI score\n",
-    "ari_score = metrics.adjusted_rand_score(y_iris[hdbscan_labels != -1], \n",
-    "                                       hdbscan_labels[hdbscan_labels != -1]) if n_noise < len(X_iris) else 0\n",
+    "ari_score = metrics.adjusted_rand_score(\n",
+    "    y_iris[hdbscan_labels != -1], \n",
+    "    hdbscan_labels[hdbscan_labels != -1]\n",
+    ") if n_noise < len(X_iris) else 0\n",
     "\n",
     "if ari_score > 0.8:\n",
     "    alignment = \"Excellent\"\n",
